--- a/web/bower.json
+++ b/web/bower.json
@@ -13,7 +13,7 @@
     "angular-route": "1.2.16",
     "bootstrap": "~3.1.1",
     "momentjs": "~2.6.0",
-    "spin.js": "~2.0.1"
+    "fontawesome": "~4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
